fixing ner layout bug

--- a/demo/src/components/highlight/Highlight.css
+++ b/demo/src/components/highlight/Highlight.css
@@ -2,134 +2,12 @@
 Highlight Component Styles
 ********************************************/
 
-/* .highlight-container {
-  line-height: 36px !important;
-}
-
-.highlight-container.highlight-container--bottom-labels {
-  line-height: 52px !important;
-  padding: 10px 1.125em
-}
-
-.highlight-container,
-.highlight-container--bottom-labels {
-  cursor: default;
-}
-
-.highlight {
-  border: 2px solid;
-  color: #232323;
-  margin: 0 2px -5px 2px;
-  padding: 0px 5px;
-  box-shadow: 2px 4px 20px rgba(0,0,0,0.1);
-  position: relative;
-  display: inline-block;
-  line-height: 24px;
-  cursor: default;
-  min-width: 26px;
-}
-
-.highlight,
-.highlight span {
-  transition: background-color .1s ease,
-              color .1s ease,
-              box-shadow .1s ease,
-              opacity .1s ease;
-}
-
-.highlight .highlight {
-  margin-top: 3px;
-  margin-bottom: 3px;
-}
-
-.highlight + span:not(.highlight):before {
-  content: " ";
-}
-
-.highlight.bottom {
-  padding: 0px 5px 16px 5px;
-}
-
-.highlight.short-text {
-  text-align: center;
-}
-
-.highlight.bottom:after {
-  display: block;
-  position: absolute;
-  height: 15px;
-  content: attr(data-label);
-  text-align: center;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  font-size: 11px;
-  line-height: 16px;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-
-.highlight.active,
-.highlight.active span {
-  color: #fff;
-}
-
-.highlight.active .highlight:not(.active) span {
-  color: #232323;
-}
-
-.highlight.left:before,
-.highlight.right:after {
-  display: inline-block;
-  height: 100%;
-  padding: 0 8px;
-  vertical-align: top;
-  content: attr(data-label);
-  font-size: 11px;
-  line-height: 24px;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-weight: bold;
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-
-.highlight.left:before {
-  margin: 0 5px 0 -5px;
-}
-
-.highlight.right:after {
-  margin: 0 -5px 0 5px;
-}
-
-.highlight.left:after,
-.highlight.right:before {
-  display: none;
-} */
-
-
-
-
-
-
 .highlight-container {
   line-height: 42px !important;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   white-space: pre;
-}
-
-/* .highlight-container.highlight-container--bottom-labels {
-  line-height: 52px !important;
-  padding: 10px 1.125em
-} */
-
-.highlight-container,
-.highlight-container--bottom-labels {
   cursor: default;
 }
 
@@ -168,8 +46,10 @@ Highlight Component Styles
 
 .highlight__label {
   align-items: center;
+  justify-content: center;
   display: flex;
   padding: 0 8px;
+  text-align: center;
 }
 
 .highlight__label strong {
@@ -186,9 +66,35 @@ Highlight Component Styles
   flex-wrap: wrap;
   align-items: center;
   padding: 2px 2px 2px 6px;
-  /* white-space: normal; */
 }
 
+/* Bottom Label Layout */
+
+.highlight-container.highlight-container--bottom-labels {
+  padding: 10px 1.125em;;
+  align-items: flex-start;
+}
+
+.highlight-container.highlight-container--bottom-labels .highlight.bottom {
+  margin-top: 6px;
+}
+
+.highlight.bottom {
+  display: block;
+  white-space: normal;
+}
+
+.highlight.bottom .highlight__content:after {
+  content: " ";
+  padding-right: 3px;
+}
+
+.highlight.bottom .highlight__label {
+  line-height: 14px;
+  padding-top: 1px;
+}
+
+/* Interactions */
 
 .highlight.active,
 .highlight.active span {
@@ -198,9 +104,6 @@ Highlight Component Styles
 .highlight.active .highlight:not(.active) span {
   color: #232323;
 }
-
-
-
 
 .highlight.clickable {
   cursor: pointer;
@@ -222,7 +125,9 @@ Highlight Component Styles
   transition-duration: 0s;
 }
 
-/********************************************/
+/********************************************
+Colors
+********************************************/
 
 /* Gray (Default) */
 
@@ -495,7 +400,9 @@ Highlight Component Styles
   background-color: #ea83ea;
 }
 
-/********************************************/
+/********************************************
+Tooltip
+********************************************/
 
 .highlight__tooltip {
   display: block;
